--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ ml-dtypes==0.3.2
 namex==0.0.8
 narwhals==1.33.0
 numpy==1.26.4
-opencv-python==4.11.0.86
+opencv-python-headless==4.7.0.72
 opt_einsum==3.4.0
 optree==0.15.0
 packaging==24.2
